--- a/DatingAppNew/Properties/launchSettings.json
+++ b/DatingAppNew/Properties/launchSettings.json
@@ -19,11 +19,11 @@
     },
     "DatingAppNew": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "api/values",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     }
   }
