--- a/DatingAppNew/appsettings.json
+++ b/DatingAppNew/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "AppSettings": {
+    "Token": "Super Secret Key"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DatingApp.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
