end of module 12

--- a/DatingAppNew/appsettings.Development.json
+++ b/DatingAppNew/appsettings.Development.json
@@ -11,5 +11,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "CloudinarySettings": {
+    "CloudName": "demodatingapp",
+    "ApiKey": "534611217149639",
+    "ApiSecretKey": "8UFu3qkWnrlDPmlycLPiwgSAyGQ"
   }
 }
