--- a/DatingAppNew/appsettings.json
+++ b/DatingAppNew/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "demodatingapp",
+    "ApiKey": "534611217149639",
+    "ApiSecretKey": "8UFu3qkWnrlDPmlycLPiwgSAyGQ"
+  }
 }
